Fixes nav alignment on smaller screens

--- a/wp-content/themes/lobban/src/sass/_masthead.scss
+++ b/wp-content/themes/lobban/src/sass/_masthead.scss
@@ -36,7 +36,8 @@
 
 [role="navigation"] ul {
 	display: flex;
-	
+	margin-left: auto;
+	margin-right: auto;
 	justify-content: space-between;
 	max-width: 400px;
 	width: 100%;
